Instant crash when Shift+D duplicating a Collection Instance #78004

Closed
opened 2020-06-18 18:37:57 +02:00 by Steffen Dünner · 6 comments

System Information
Operating system: Linux-5.4.45-050445-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64.00

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-18 16:27, hash: d5954ef11c
Worked: 2.83 Final, 2.90.0 2797a63a66 from a few days ago also worked

Short description of error
Using Shift+D to duplicate a Collection Instance instantly closes Blender.

Exact steps for others to reproduce the error

  • Create an object (a simple cube will do)
  • Use M to move it into a new Collection
  • Shift+A and add the new Collection Instance
  • Shift+D to duplicate it -> Crash
**System Information** Operating system: Linux-5.4.45-050445-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.64.00 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-18 16:27, hash: `d5954ef11c` Worked: 2.83 Final, 2.90.0 2797a63a6606 from a few days ago also worked **Short description of error** Using Shift+D to duplicate a Collection Instance instantly closes Blender. **Exact steps for others to reproduce the error** - Create an object (a simple cube will do) - Use M to move it into a new Collection - Shift+A and add the new Collection Instance - Shift+D to duplicate it -> Crash

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

obn->data in BKE_object_duplicate is NULL.

BKE_object_duplicate(Main * bmain, Object * ob, const eDupli_ID_Flags dupflag, const eLibIDDuplicateFlags duplicate_options) Line 1809	C
object_add_duplicate_internal(Main * bmain, Scene * scene, ViewLayer * view_layer, Object * ob, const eDupli_ID_Flags dupflag, const eLibIDDuplicateFlags duplicate_options) Line 2814	C
duplicate_exec(bContext * C, wmOperator * op) Line 2895	C
wm_macro_invoke_internal(bContext * C, wmOperator * op, const wmEvent * event, wmOperator * opm) Line 372	C
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1287	C
wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2116	C
wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2426	C
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2727	C
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2857	C
wm_event_do_handlers(bContext * C) Line 3360	C
WM_main(bContext * C) Line 478	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 534	C
`obn->data` in `BKE_object_duplicate` is `NULL`. ``` BKE_object_duplicate(Main * bmain, Object * ob, const eDupli_ID_Flags dupflag, const eLibIDDuplicateFlags duplicate_options) Line 1809 C object_add_duplicate_internal(Main * bmain, Scene * scene, ViewLayer * view_layer, Object * ob, const eDupli_ID_Flags dupflag, const eLibIDDuplicateFlags duplicate_options) Line 2814 C duplicate_exec(bContext * C, wmOperator * op) Line 2895 C wm_macro_invoke_internal(bContext * C, wmOperator * op, const wmEvent * event, wmOperator * opm) Line 372 C wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1287 C wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2116 C wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2426 C wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2727 C wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2857 C wm_event_do_handlers(bContext * C) Line 3360 C WM_main(bContext * C) Line 478 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 534 C ```
Bastien Montagne self-assigned this 2020-06-18 20:02:54 +02:00

This issue was referenced by d56444392f

This issue was referenced by d56444392f41e5115bb001af9fa50747f6295834

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78004
No description provided.