Fix T78004: Instant crash when Shift+D duplicating a Collection Instance.

Dummy mistake in own recent refactor of duplicate code...